[package]
name = "tron-payment"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tron-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
hex = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"