[package]
name = "tron-core"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
hex = "0.4"
k256 = { version = "0.9.4", features = ["ecdsa-core", "keccak256"] }
rand = "0.8.4"
sha2 = "0.9.5"
sha3 = "0.9.1"
bs58 = "0.4.0"
log = "0.4"
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ethabi = "14"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.4"